# cardiff-autonomous-racing

./: .bashrc  .dockerignore  .gitignore  .gitmodules  DOCKER_README.md  Dockerfile  ON_CAR_SETUP.md  PERCEPTION_FORMAT.md  README.md  SKIDPAD_READINESS.md  docker-compose.yml  final_cone_map.json  inputs.txt  install.md  publish_mock_cones.sh  requirements.txt  test_car_pose_publisher.py  test_cone_publisher.py  test_path_planning.sh
Control/: .gitignore  README.md  autostart_control.sh  decode_candump.py  mock_control_node.py  simple_mock_control.py  start_control.sh  start_control_eufs.sh  start_control_eufs_2.sh
Control/MPC/: main.py
Control/docs/: How_the_code_works.md
Control/docs/Visual_Paradigm/: CAR.vpp  CAR.vpp.bak_000f  CAR.vpp.bak_001d  CAR.vpp.bak_002d  CAR.vpp.bak_003d  CAR.vpp.bak_004d  CAR.vpp.bak_005d  CAR.vpp.bak_006d  CAR.vpp.bak_007d  CAR.vpp.bak_008d  CAR.vpp.bak_009d  CAR.vpp.bak_010d  CAR.vpp.vbak  CAR.vpp.vbak~1
Control/eufs_msgs/: CMakeLists.txt  package.xml
Control/eufs_msgs/msg/: CanState.msg  CarState.msg  LapStats.msg  VehicleCommandsStamped.msg  WheelSpeeds.msg  WheelSpeedsStamped.msg
Control/model/: vehical_model.py
Control/ros_can/: README.md
Control/ros_can/include/: ros_can.hpp
Control/ros_can/launch/: ros_can.launch.py
Control/ros_can/src/: ros_can.cpp
Control/ros_control/: README.md  package.xml  setup.py
Control/ros_control/launch/: ros_control.launch.py  ros_control_logs.txt
Control/ros_control/ros_control/: cmd_node.py  cmd_pub.py  driving_flag_pub.py  mission_control.py  mission_flag_enums.py  mission_flag_pub.py  mock_control.py  simple_control_node.py  wheelslip_detector.py
Legacy Code/car-Shahab/: .gitignore  README.md  enumerate.m  inpaint.m
Legacy Code/car-Shahab/SETUP/: README.md  setup_autopilot.sh  setup_simulator.sh
Legacy Code/car-Shahab/attic/: crop_amz.m  crop_driver.m  gen_track.m  generate_polygon.m  im2cones.m  simple_control.m  test_planning.m
Legacy Code/car-Shahab/autopilot/: CNN.py  accumulate_angle.m  analyse_track_local.m  autopilot.py  autopilot_thread.py  cam.mat  car.py  car_id_nn.py  car_model.mat  car_sim.m  cluster_cones.m  cnn_init_id.m  cnn_remove_bnorm.m  cnn_train.m  collect_id_data.py  cone_pos_test.py  cones_4_labelled.txt  cones_from_sim.m  cones_recorded.txt  config.py  control.py  derivative.m  derivative2.m  detector.py  (+63 more)
Path Planning/: dummyInputs.py  dummy_inputs.py  gui.py  integration.py  main.py  mock_control.py  pathPlanningREADME.md  rrt(star).py  rrt_star.py
Path Planning/Legacy code/: rrt_star.py
Path Planning/launch/: launch.py
Path Planning/mocking/: mock_car.py  mock_perception.py
Path_Planning/: INTEGRATION_GUIDE.md  SYSTEM_ARCHITECTURE.md  integration.py  package.xml  pathPlanningREADME.md  path_planning_gui.py  requirements.txt  rrt_star.py  setup.py  setup_tum.sh  test_tum_integration.py
Path_Planning/Legacy code/: example_integration.py  integration.py  pathPlanningREADME.md  visualize_with_perception.py
Path_Planning/launch/: launch.py
Path_Planning/path_planning/: integration.py  tum_wrapper.py
Path_Planning/test_scenarios/: README.md  chicane.json  complex_circuit.json  hairpin.json  straight_track.json
can_data/: another_test.txt  cangaroo_no_ros_debug_logs.asc  cangaroo_no_ros_debug_no_comand_actual.asc  cangaroo_no_ros_logs_no_command_node.asc  cangaroows.cangaroo  handshake_graph.gdf  handshake_graph_data-after_restarted_sim.csv  no_ros_logs.csv  removed_all_debug_logs.gvret
config/: racing_visualization.rviz
docker/: DOCKER_README.md  Dockerfile.base  Dockerfile.control  Dockerfile.eufs_sim  Dockerfile.eufs_simple  Dockerfile.pathplanning  Dockerfile.perception  Dockerfile.planning  entrypoint_control.sh  entrypoint_eufs_sim.sh  entrypoint_perception.sh  entrypoint_planning.sh  shared.env
logs/: slam_poses.csv
perception_ws/: .gitignore  NEW_README.md  README.md  README_perception.md
perception_ws.legacy_backup_20260715_202815/: NEW_README.md
perception_ws/ORB_SLAM3_mask/: CMakeLists.txt
perception_ws/ORB_SLAM3_src/: README.md
perception_ws/install_slam_example/: local_setup.sh  setup.sh
perception_ws/log_local/: latest_build
perception_ws/log_slam_example/: latest_build
perception_ws/scripts/: build_perception.sh  dev_perception.sh  run_perception.sh
perception_ws/src/cone_detector/: README.md  package.xml  setup.py
perception_ws/src/cone_detector/cone_detector/: YOLO_cone_detector.py  cone_detector_node.py
perception_ws/src/cone_detector/launch/: cone_detector.launch.py
perception_ws/src/landmark_slam/: package.xml  setup.py
perception_ws/src/landmark_slam/landmark_slam/: camera_transform.py  ekf.py  landmark_slam_node.py
perception_ws/src/landmark_slam/test/: test_camera_transform.py  test_ekf.py  test_integration.py
perception_ws/src/slam_example/: CMakeLists.txt  package.xml
perception_ws/src/slam_example/config/: camera_and_slam_settings.yaml
perception_ws/src/slam_example/include/slam_example/: image_grabber_stereo.hpp  image_grabber_stereo_inertial.hpp
perception_ws/src/slam_example/launch/: image_capture.py  perception_full.launch.py  slam_stereo_inertial.launch.py
perception_ws/src/slam_example/src/: image_grabber_stereo_inertial.cpp  orb_slam3_stereo_inertial.cpp  slam_pose_logger.cpp
presentation_graphics/: S3_perception_slides.md
scripts/: build_docker.sh  check_car_deps.sh  check_system.bat  check_system.sh  dev_reload.sh  fetch_orb_vocabulary.sh  final_cone_map.json  lap_test_driver.py  launch_skidpad_car.sh  launch_visualization.sh  path_follower.py  path_image_overlay.py  quick_setup.sh  record_planner_view.py  run_docker.sh  run_full_autonomous_lap.sh  run_full_autonomous_lap_car.sh  run_full_autonomous_lap_native.sh  run_lap_validation.sh  run_zed_desk_demo.sh  setup_carmaker_sim.sh  setup_real_car.sh  skidpad_driver.py  start_sim_and_log_slam.sh  validate_map.py  validate_slam.py  verify_outputs.sh  verify_system.sh  webcam_test_publisher.py  webcam_test_viewer.py  wipe_run_data.sh
test_data/: mock_pose_publisher.py  test_cone_published.py  test_image_publisher.py
(+643 files in other folders)
