<?xml version="1.0"?>
<package format="3">
  <name>landmark_slam</name>
  <version>0.1.0</version>
  <description>
    EKF-SLAM using cone landmarks for Formula Student AI.
    Drop-in replacement for ORB-SLAM3: publishes /odometry/slam from
    wheel-odometry dead-reckoning corrected by YOLO cone observations.
  </description>
  <maintainer email="cardiff@racing.ac.uk">Cardiff Autonomous Racing</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>python3-numpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
